[package]
name = "dshuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
drand_core = "0.0.15"
hex = "0.4.3"
humantime = "2.1.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = "1.0.152"
serde_json = "1.0.93"

[dev-dependencies]
test-case = "3.0.0"

[[bin]]
name = "dshuf-nextround"
